# inter_iit_dgre_voad

./: .gitmodules  README.md  install_ssh.rosinstall
active_planner/: CMakeLists.txt  package.xml
active_planner/cfg/: frontier_params.yaml  params.yaml  voxblox_params.yaml
active_planner/cfg/planners/: reconstruction_planner.yaml
active_planner/include/active_planner/: frontier_evaluator.hpp  graph_def.hpp  local_planner.hpp  path_finder.hpp  visualizer.hpp
active_planner/launch/: active_3d_planner.launch  local_planner.launch  server.launch
active_planner/src/: active_planner_node.cpp  frontier_evaluator.cpp  local_planner.cpp  local_planner_node.cpp  path_finder.cpp  visualizer.cpp
aruco_ros/: README.md
box_detector/: CMakeLists.txt  package.xml
box_detector/cfg/: params.yaml
box_detector/include/box_detector/: box_detector.hpp  libbox_detection.hpp
box_detector/launch/: default.launch
box_detector/src/: box_detector.cpp  box_detector_node.cpp  libbox_detection.cpp
broadcaster/: CMakeLists.txt  package.xml
broadcaster/src/: iris_tf2_broadcaster.cpp
detector_msgs/: package.xml
explorer/: package.xml
explorer/include/explorer/: explorer.hpp
explorer/launch/: default.launch  explorer_node.launch
explorer/src/: explorer.cpp
interiit21/: Installation.html  Installation.md  package.xml
interiit21/launch/: apm.launch  interiit_world1.launch  interiit_world2.launch  interiit_world3.launch  testing_world1.launch  testing_world2.launch  testing_world3.launch  world.launch
interiit21/models/drone_with_depth_camera/: model.sdf
interiit21/models/gimbal_small_2d/: model.sdf
interiit21/models/iris_base/: untitled
lander/: CMakeLists.txt  package.xml
lander/include/lander/: lander.hpp
lander/launch/: default.launch
lander/src/: lander.cpp  lander_node.cpp
pose_estimator/: CMakeLists.txt  package.xml
pose_estimator/config/: params.yaml
pose_estimator/include/pose_estimator/: libpose_estimation.hpp  pose_estimator.hpp
pose_estimator/launch/: default.launch
pose_estimator/src/: libpose_estimation.cpp  pose_estimator.cpp  pose_estimator_node.cpp
rviz/: default.rviz
