<?xml version="1.0"?>
<package format="2">
    <name>active_planner</name>
    <version>0.0.0</version>
    <description>Sampling-based Online Frontier Exploration Path Planning.</description>

    <maintainer email="user@gmail.com">16</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>

    <depend>roscpp</depend>
    <depend>voxblox_ros</depend>
    <depend>voxblox</depend>
    <depend>mav_msgs</depend>
    <depend>std_msgs</depend>
    <depend>std_srvs</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>tf</depend>
    <depend>visualization_msgs</depend>

</package>
