<?xml version="1.0"?>
<package format="2">
  <name>pose_estimator</name>
  <version>0.0.0</version>
  <description>Converts image coordinates to global coordinates</description>

  <maintainer email="ashwins@iitk.ac.in">Ashwin Shenai</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>roscpp</build_depend>

  <depend>cv_bridge</depend>
  <depend>detector_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>eigen_conversions</depend>

</package>
